--- a/flaskApp/templates/camera.html
+++ b/flaskApp/templates/camera.html
@@ -6,8 +6,11 @@
     <title>Document</title>
 </head>
 <body>
-    <div>
+    <h1>
         Camera
+    </h1>
+    <div>
+        <img src="{{url_for('camera.stream')}}" width="50%">
     </div>
 </body>
 </html>
