Added hyperlinks to html pages

--- a/flaskApp/templates/index.html
+++ b/flaskApp/templates/index.html
@@ -10,6 +10,9 @@
         <h1>
             Home Page
         </h1>
+        <ul>
+            <li><a href="/camera">View cameras</a></li>
+        </ul>
     </div>
 </body>
 </html>
