--- a/flaskApp/templates/camera.html
+++ b/flaskApp/templates/camera.html
@@ -9,6 +9,7 @@
     <h1>
         Camera
     </h1>
+    <p><a href="/..">Home page</a></p>
     <div>
         <img src="{{url_for('camera.stream')}}" width="50%">
     </div>
