Added contorl panel page

--- a/flaskApp/templates/index.html
+++ b/flaskApp/templates/index.html
@@ -12,6 +12,7 @@
         </h1>
         <ul>
             <li><a href="/camera">View cameras</a></li>
+            <li><a href="/controls">View control panel</a></li>
         </ul>
     </div>
 </body>
