Added second camera

--- a/flaskApp/templates/camera.html
+++ b/flaskApp/templates/camera.html
@@ -11,7 +11,8 @@
     </h1>
     <p><a href="/..">Home page</a></p>
     <div>
-        <img src="{{url_for('camera.stream')}}" width="50%">
+        <img src="{{url_for('camera.stream1')}}" width="50%">
+        <img src="{{url_for('camera.stream2')}}" width="50%">
     </div>
 </body>
 </html>
